syntax = "proto3";
package proto;
import "shared.proto";


service AuthService {
    rpc Login(LoginRequest) returns (LoginResponse);
}


message LoginRequest {
    string email = 1;
    string password = 2;
}

message LoginData {
    string accessToken = 1;
    string refreshToken = 2;
}

message LoginResponse {
    LoginData data = 1;
    Status status = 2;

}
